--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://laureac.github.io/meditation-app/",
+  "homepage": "https://laureac.github.io/",
   "name": "meditation",
   "version": "0.1.0",
   "private": true,
