--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-howler": "^3.7.4",
     "react-scripts": "3.4.1",
-    "react-sound": "^1.2.0"
+    "react-sound": "^1.2.0",
+    "swiper": "^6.3.1"
   },
   "scripts": {
     "predeploy": "yarn build",
