--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "swiper": "^6.3.1"
   },
   "scripts": {
-    "predeploy": "yarn build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start --no-cache",
     "build": "react-scripts build",
